css/styles.css
/* CSS Override Tachyons Styles */


/* ======= Link styling ======= */
a {
	color: #230526;
  text-decoration: underline;
  background-color: transparent;
}

a:visited {
	color: #362B37;
  text-decoration: underline;
}

a:hover {
	color: #840A91;
  background-color: #EFE4F0;
  text-decoration: underline;
}

a.placeholder,
a:visited.placeholder,
a:hover.placeholder,
.horizontal-nav a.placeholder {
  color: #2D72C2;
  font-style: italic;
  background-color: transparent;
  text-decoration: line-through;
}

.footer-link a, .footer-link a:visited {
  color: hsla(0, 0%, 100%, .7);
  display: flex;
  flex-direction: row;
  margin-bottom: 0.5rem;
  text-decoration: none;
}

.footer-link a:hover {
  color: #808080;
  text-decoration: none;
  background-color: transparent;
}

.horizontal-nav a {
  margin-right: 1rem;
  color:#1B1B1B;
}

a.main-title, a:hover.main-title, a:visited.main-title {
  text-decoration: none;
  color: #1B1B1B;
}

.lockednav-links {
  list-style:decimal-leading-zero;
  padding: 1rem 1rem 1rem 2.5rem;
  line-height: 2em;
  margin: 0;
}

.lockednav-links li {
  font-family: 'Playfair Display', serif;
  margin-bottom: 15px;
  font-size: 24px;
}

.lockednav-exlinks li {
  margin-bottom: 15px;
}

.lockednav-exlinks {
  list-style: none;
  padding-left: 0px;
}

a.deprecated-link {
  text-decoration: line-through;
  color: #808080;
  background-color: #eee;
}

a.deprecated-link:hover {
  cursor: not-allowed;
}

/* ==================================== */

/* ======= Font styling ======= */

.font {
  font-family: 'Roboto Condensed', sans-serif;
  background-color: #FEFEFE;
}

p.playfair {
  font-family: 'Playfair Display', serif;
}

h1 {
      font-family: 'Playfair Display', serif;
      color: #1B1B1B;
      font-weight: 100;
      font-size: 3rem;
}

h2 {
    font-family: 'Playfair Display', serif;
    color: #1B1B1B;
    font-weight: 100;
    font-size: 2rem;
}

h3 {
  font-family: 'Playfair Display', serif;
  color: #1B1B1B;
  font-weight:100;
  font-size: 1.4rem;
}

.sub-title {
  color: #828282;
}

.spaced-out {
  letter-spacing: 0.2em;
  color: #1B1B1B;
}

.caption {
  font-style: italic;
  font-size: 14px;
}

.code {
  /* font-family: 'Courier', 'Monaco'; */
  color: #56215C;
  padding: 1.5rem;
  background-color: #F5F3F6;
  border: 1px solid #D9D0DA;
  font-size: 16px;
}

.header {
  display: flex;
  align-items: center;
}

.header-text {
  display: flex;
  flex-direction: column;
  margin-left: 16px;
}

.header-index-text {
  display: flex;
  flex-direction: column;
}

.headline {
  margin-bottom: 4px;
}

.work-title {
  background-color: #dddddd;
  color: #1B1B1B;
  padding: 50px 30px;
  border-left: solid 10px #000;
}

blockquote {
  border-color: #B885F9;
}

/* ==================================== */

/* ======= Image styling ======= */

.mainview {
  background-image: url(images/bg-1.png);
}

.blog-img {
  max-height: 450px;
}

.small-img {
  width: 500px;
}

.column img {
  margin-top: 8px;
  vertical-align: middle;
  width: 100%;
}

.img-section {
  display: flex;
  flex-wrap: wrap;
  margin: 0 0 2rem 0;
  justify-content: space-between;
}

.img-sub {
  width: 48%;
}

.img-sub img {
  max-height: 260px;
  border: 1px solid #ccc;
}

.img-sub h3 {
  margin-top: 0px;
  margin-bottom: 32px;
}

.img-nav {
  display: flex;
  flex-wrap: wrap;
  margin: 0 0 2rem 0;
  justify-content: space-between;
  width: 30%;
}

.img-nav a img {
  border: 1px solid #ccc;
}

/* ==================================== */

/* ======= Background styling ======= */

.blog-callout {
  background-color: #F5F3F6;
  border:1px solid #840A91;
  padding: 3rem;
  margin: 3rem 0;
  line-height: 2em;
}

.blog-callout h3 {
  margin-top: 0;
}

.blog-img-border {
  border: 1px solid #333;
}

footer {
  background-color: #222222;
}

.toggle-callout {
  background-color: #FFF6E8;
  color: #656565;
  font-weight: 100;
  padding: 0.4rem 0.7rem;
  margin: 0;
  width:fit-content;
  display: flex;
  align-items: center;
}

/* ==================================== */

/* ======= Table styling ======= */

table {
  font-size: 16px;
  font-weight: 400;
  border-collapse: collapse;
  width: 100%;
}

td,
th {
  border: 1px solid #dddddd;
  text-align: left;
  padding: 8px;
  font-weight: normal;
}

tr:nth-child(even) {
  background-color: #eeeeee;
}

/* ==================================== */


.horizontal-nav {
  display: flex;
  align-items: center;
  margin-left: 16px;
}

.horizontal-flex {
  display: flex;
  flex-direction: row;
  align-items: baseline;
}

#the-sticky-div.sticky {
  position: fixed;
  top: 10px;
  width: 14em;
  max-width: 275px;
}

#the-sticky-div.sticky h2 {
  font-size: 34px;
}

#the-sticky-div.sticky hr.small-line {
  width: 100%;
}

#the-sticky-div.sticky .lockednav-links li {
  margin-bottom: 20px;
}

.line-clamp-3 {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  /* truncate to 3 lines */
  -webkit-line-clamp: 3;
}


/* ======= Line styling ======= */

hr {
  height: 1px;
  border: none;
  border-top: 2px dotted black;
}

.small-line {
  width: 15%;
}

.mid-line {
  width: 35%;
}

/* ==================================== */

.category {
  display: flex;
  flex-direction: column;
  margin-bottom: 32px;
}

.category h3 {
  margin-bottom: 4px;
}

.row {
  display: flex;
  flex-wrap: wrap;
  padding: 0 4px;
}

/* Create two equal columns that sits next to each other */
.column {
  flex: 50%;
  max-width: 50%;
  padding: 0 4px;
}

.math-box {
  background-color: #eee;
  border: 1px solid;
  margin-bottom: 24px;
  font-size: 24px;
}

.math-box p {
  text-align: center;
  font-size: 16px;
}

.tag-section{
  display: flex;
  flex-wrap: wrap;
}

.tag{
  color: #000;;
  background-color: #ddd;
  padding: 4px 8px;
  margin: 8px 8px 0 0;
  border-radius: 2px;
}

/* ======= Responsive stuff ======= */

/* Medium size screen */
@media screen and (min-width: 30em) and (max-width: 60em) {
  .img-nav {
      width: 40%;
    }
  .math-box {
      margin-bottom: 16px;
      font-size: 16px;
  }
  #the-sticky-div.sticky {
    position: relative;
    width: 100%;
    max-width: 100%;
  }
  #the-sticky-div hr.small-line {
    width: 100%;
  }
  .popupClose {
    display: none;
  }
}

/* Small size screen */
@media screen and (max-width: 30em) {
  .horizontal-nav {
      display: block;
      margin-left: 0;
    }

  .img-nav {
    display: flex;
    flex-wrap: wrap;
    margin: 0 0 2rem 0;
    justify-content: space-between;
    width: 98%;
  }
  
  .img-section {
    display: block;
  }

  .img-sub {
    width: 98%;
  }

  .row {
    display: block;
  }

  .column {
    max-width: 100%;
  }

  .horizontal-flex {
    flex-direction: column;
  }

  .img-nav {
    width: 100%;
  }

  .math-box {
    margin-bottom: 16px;
    font-size: 16px;
  }

  #the-sticky-div.sticky {
    position: relative;
    width: 100%;
    max-width: 100%;
  }

  #the-sticky-div hr.small-line {
    width: 100%;
  }

  .popupClose {
    display: none;
  }
}


/* Image modal pop up */
.popupHolder {
  visibility: hidden;
  position: fixed;
  top: 0;
  left: 0;
  max-width: 100vw;
  width: 100%;
  height: 100vh;
  background: rgba(0, 0, 0, 0.90);
  z-index: 888888;
}

.popupFlex {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100vh;
}

.popup {
  position: relative;
  background: #FFF;
  max-width: 95%;
  max-height: 95%;
}

.popupClose {
  position: absolute;
  right: 45%;
  bottom: 0.4rem;
  color: #230526;
  font-family: 'Playfair Display', serif;
  text-decoration: underline;
  font-weight: 100;
  font-size: 1rem;
  cursor: pointer;
  z-index: 999999;
}

.popupClose:hover {
  color: #840A91;
  background-color: #EFE4F0;
}

.popupCnt {
  padding: 3%;
  text-align: center;
}

.popupCnt #img01 {
  height: 50%;
}


/* ########################## */
/* DARK mode */
/* ########################## */

.checkbox {
  opacity: 0;
  position: absolute;
}

.checkbox-label {
  background-color: #f39c12;
  width: 40px;
  height: 16px;
  border-radius: 50px;
  position: relative;
  padding: 5px;
  cursor: pointer;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.moon {
  color: #FFE992;
}

.sun {
  color: #fff;
}

.checkbox-label .ball {
  background-color: #fff;
  width: 22px;
  height: 22px;
  position: absolute;
  left: 2px;
  top: 2px;
  border-radius: 50%;
  transition: transform 0.2s linear;
}

.checkbox:checked+.checkbox-label .ball {
  transform: translateX(24px);
}

body.dark {
  background-color: #292929;
}

body.dark h1,
body.dark h2,
body.dark h3,
body.dark h4,
body.dark p,
body.dark li
{
  color: #fff;
}

body.dark hr {
  border-top: 2px dotted #fff;
}

body.dark .checkbox-label {
  background-color: #0D1347;
}

body.dark a, body.dark a:visited {
  color: #B885F9;
  text-decoration: underline;
  background-color: transparent;
}

body.dark .header-tex a:visited.main-title,
body.dark .header-tex a:hover.main-title,
body.dark .header-text a,
body.dark .header-text a:visited,
body.dark .header-tex a.main-title {
  text-decoration: none;
  background-color: transparent;
  color: #fff;
}

body.dark .header-text a:hover {
    text-decoration: underline;
    background-color: transparent;
    color: #fff;
}

body.dark a:hover {
  color: #B885F9;
  background-color: #362748;
  text-decoration: underline;
}

body.dark a.placeholder, body.dark a:visited.placeholder, body.dark a:hover.placeholder {
  color: #60A1EE;
  background-color:transparent;
}

body.dark .footer-link a,
body.dark .footer-link a:hover,
body.dark .footer-link a:visited {
  color: hsla(0, 0%, 100%, .7);
  text-decoration: none;
}

body.dark .footer-link a:hover {
  background-color: transparent;
  color: hsla(0, 0%, 100%, .9);
}

body.dark cite {
  color: #BDBDBD;
}

body.dark td,
body.dark th {
  border: 1px solid #121212;
  color: #fff;
}

body.dark .toggle-callout {
  background-color: #23242C;
}

body.dark tr:nth-child(even) {
  background-color: #212121;
}

body.dark .blog-callout {
  color: #fff;
  background-color: #28252B;
  border: 1px solid #121212;
}

body.dark .code {
  color: #B885F9;
  background-color: #28252B;
  border: 1px solid #121212;
}

